new landing & animation

--- a/index.html
+++ b/index.html
@@ -5,49 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css">
-    <script src="./src/index.js"></script>
-    <title>Comic</title>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="src/style.css">
+    <title>Enceladus Comic</title>
 </head>
 
 <body>
-    <div id="nav">
-        <div class="nav-link">
-            <a href="/">
-                <div class="nav-icon">
-                    <i class="fa-solid fa-house"></i>
-                </div>
-                <div class="nav-text">Home</div>
-            </a>
-        </div>
-        <div class="nav-link">
-            <a href="/src/index2.html">
-                <div class="nav-icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>                </div>
-                <div class="nav-text">Comic</div>
-            </a>
-        </div>
+    <div class="landing">
+        <span class="landing-text spotlight">123456789</span>
     </div>
-
-    <div id="header">
-        <div class="cards">
-            <div class="card">
-                <h1>he</h1>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="license">
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License"
-                style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This
-        work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative
-            Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
-    </div>
+    <!-- <div class="nav">
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">Read</a>
+        <a href="#" class="nav-link">About</a>
+    </div> -->
 </body>
+
+<script src="src/index.js"></script>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@500&family=Roboto+Condensed&display=swap');
+</style>
 
 </html>
