--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="landing">
-        <span class="landing-text spotlight">123456789</span>
+        <span class="landing-text spotlight">Enceladus</span>
     </div>
     <!-- <div class="nav">
         <a href="#" class="nav-link">Home</a>
