--- a/index4.html
+++ b/index4.html
@@ -9,37 +9,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleEye.css">
     <title>Enceladus Comic</title>
 </head>
 
 <body>
-    <div class="landing">
-        <span class="landing-text spotlight" onclick="ani()">ENCELADUS</span>
-        <div class="eye-wrap">
-            <div class="eyelid">
-                <span id="eyelid-span"></span>
-            </div>
-            <div class="eye">
-                <div class="eye-ball">
-                    <div class="iris"></div>
-                    <div class="iris2"></div>
-                    <div class="iris3"></div>
-                    <div class="iris4"></div>
-                    <div class="pupil"></div>
-                </div>
+    <div class="eye-wrap" onclick="ani()">
+        <div id="eyelid">
+            <span id="eyelid-span"></span>
+        </div>
+        <div class="eye">
+            <div class="eye-ball">
+                <div class="iris"></div>
+                <div class="iris2"></div>
+                <div class="iris3"></div>
+                <div class="pupil"></div>
             </div>
         </div>
     </div>
-    <!-- <div class="nav">
-        <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Read</a>
-        <a href="#" class="nav-link">About</a>
-    </div> -->
 </body>
 
-<script src="index.js"></script>
 <script src="index4.js"></script>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@500&family=Roboto+Condensed&display=swap');
