--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
             </div>
         </div>
     </div>
+    <main>
+        h1
+    </main>
+    <!-- TO DO / IDEAS
+
+    transition to blog/next page, the mouth of the guy (in white) comes up and swallows everything, then we end up on the actual main page (not landing)
+        maybe everything slides up, introducing the teeth, then it opens. 
+
+-->
+
     <!-- <div class="nav">
         <a href="#" class="nav-link">Home</a>
         <a href="#" class="nav-link">Read</a>
