--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styleEye.css">
     <title>Enceladus Comic</title>
 </head>
 
 <body>
     <div class="landing">
         <span class="landing-text spotlight" onclick="ani()">ENCELADUS</span>
+
         <div class="eye-wrap">
             <div class="eyelid">
                 <span id="eyelid-span"></span>
@@ -31,28 +29,11 @@
                 </div>
             </div>
         </div>
+
     </div>
-    <main>
-        h1
-    </main>
-    <!-- TO DO / IDEAS
-
-    transition to blog/next page, the mouth of the guy (in white) comes up and swallows everything, then we end up on the actual main page (not landing)
-        maybe everything slides up, introducing the teeth, then it opens. 
-
--->
-
-    <!-- <div class="nav">
-        <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Read</a>
-        <a href="#" class="nav-link">About</a>
-    </div> -->
 </body>
 
-<script src="index.js"></script>
-<script src="index4.js"></script>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@500&family=Roboto+Condensed&display=swap');
-</style>
+<script src="./index.js"></script>
+<script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
 
 </html>
