mobile landing complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             </div>
         </div>
 
+        <!-- <div class="mouth-wrap">
+        </div> -->
     </div>
+
 </body>
 
 <script src="./index.js"></script>
