--- a/index.html
+++ b/index.html
@@ -12,8 +12,28 @@
 </head>
 
 <body>
+    <header>
+        <ul class="nav-links">
+            <li class="spotlight-container"><a href="#">Discover</a></li>
+            <li class="spotlight-container"><a href="#">About</a></li>
+            <li class="spotlight-container"><a href="#">Contact</a></li>
+        </ul>
+    </header>
+    <!-- <header>
+        <h1>TITLE</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Discover</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="cta"><button>testest</button></a>
+    </header> -->
+
+
     <div class="landing">
-        <span class="landing-text spotlight" onclick="ani()">ENCELADUS</span>
+        <span class="landing-text spotlight-container spotlight" onclick="ani()">ENCELADUS</span>
 
         <div class="eye-wrap">
             <div class="eyelid">
@@ -29,11 +49,14 @@
                 </div>
             </div>
         </div>
-
         <!-- <div class="mouth-wrap">
         </div> -->
     </div>
-
+    <!-- 
+    <main>
+        <a href="/test/index2.html">test/index2.html</a>
+        <a href="main.html">main.html</a>
+    </main> -->
 </body>
 
 <script src="./index.js"></script>
