main page + nav bar

--- a/main.html
+++ b/main.html
@@ -12,8 +12,27 @@
 </head>
 
 <body>
+    <header>
+        <div class="nav-title-container">
+            <a href="/index.html">
+                <div class="nav-title-icon">
+                    <i class="fa-regular fa-circle-dot"></i>
+                </div>
+                <div class="nav-title-text">
+                    <h1>Enceladus</h1>
+                </div>
+            </a>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li id="main-link"><a href="/index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-
+        <!-- <h1>This is the main page!</h1> -->
     </main>
 </body>
 
