--- a/index.html
+++ b/index.html
@@ -12,29 +12,17 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <ul class="nav-links">
-            <li class="spotlight-container"><a href="#">Discover</a></li>
+            <li class="spotlight-container"><a href="/main.html">Discover</a></li>
             <li class="spotlight-container"><a href="#">About</a></li>
             <li class="spotlight-container"><a href="#">Contact</a></li>
         </ul>
-    </header>
-    <!-- <header>
-        <h1>TITLE</h1>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="#">Discover</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <a href="#" class="cta"><button>testest</button></a>
     </header> -->
 
 
     <div class="landing">
         <span class="landing-text spotlight-container spotlight" onclick="ani()">ENCELADUS</span>
-
         <div class="eye-wrap">
             <div class="eyelid">
                 <span id="eyelid-span"></span>
