main added, test flip book

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <title>Enceladus Comic</title>
 </head>
 
+
 <body>
     <header>
         <div class="nav-title-container">
@@ -25,16 +26,22 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li id="main-link"><a href="/index.html">Home</a></li>
+                <li><a href="#">Read</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+
     <main>
-        <!-- <h1>This is the main page!</h1> -->
+        <div class="main-container">
+            <h1>This is the main page!</h1>
+        </div>
     </main>
+
+
 </body>
+
 
 <script src="./index.js"></script>
 <script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
