--- a/test/index2.html
+++ b/test/index2.html
@@ -10,23 +10,19 @@
 </head>
 
 <body>
-    <main>
-        <div class="navbar">
-            <div class="container">
-                <div class="logo">
-                    <h1 class="logo-text">test</h1>
-
-                </div>
-            </div>
-            <div class="container">
-                <div class="logo">
-                    <h1 class="logo-text">test</h1>
-
-                </div>
-            </div>
-        </div>
-    </main>
-
+    <div class="book">
+        <!-- <span class="page turn"></span>
+        <span class="page turn"></span>
+        <span class="page turn"></span>
+        <span class="page turn"></span>
+        <span class="page turn"></span> -->
+        <span class="cover"></span>
+        <span class="page"></span>
+        <span class="page turn" onclick="pageTurnAni(this)"></span>
+        <span class="cover turn" onclick="coverTurnAni(this)"></span>
+    </div>
 </body>
+
+<script src="/test/index2.js"></script>
 
 </html>
