added comic, working on mobile

--- a/main.html
+++ b/main.html
@@ -35,13 +35,31 @@
 
     <main>
         <div class="main-container">
-            <h1>This is the main page!</h1>
-        </div>
+            <div class="info-text">
+                <h1>Read Enceladus</h1>
+                <h2>Hello test</h2>
+            </div>
+            <div class="display-comic">
+                <img src="/assets/Enceladus/1.png" alt="" />
+                <img src="/assets/Enceladus/2.png" alt="" />
+                <img src="/assets/Enceladus/3.png" alt="" />
+                <img src="/assets/Enceladus/4.png" alt="" />
+                <img src="/assets/Enceladus/5.png" alt="" />
+                <img src="/assets/Enceladus/6.png" alt="" />
+                <img src="/assets/Enceladus/7.png" alt="" />
+                <img src="/assets/Enceladus/8.png" alt="" />
+            </div>
     </main>
 
 
 </body>
 
+<footer>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License"
+            style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is
+    licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><u>Creative Commons
+            Attribution-NonCommercial-ShareAlike 4.0 International License</u></a>
+</footer>
 
 <script src="./index.js"></script>
 <script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
