--- a/main.html
+++ b/main.html
@@ -36,8 +36,8 @@
     <main>
         <div class="main-container">
             <div class="info-text">
-                <h1>Read Enceladus</h1>
-                <h2>Hello test</h2>
+                <h1>Chapter 0:</h1>
+                <h2>The Post-Human</h2>
             </div>
             <div class="display-comic">
                 <img src="/assets/Enceladus/1.png" alt="" />
