small css mods, changed nav links

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Read</a></li>
+                <li><a href="#">Portfolio</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
