--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/portfolio.html">Portfolio</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +61,6 @@
             Attribution-NonCommercial-ShareAlike 4.0 International License</u></a>
 </footer>
 
-<script src="./index.js"></script>
 <script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
 
 </html>
