added info (need more), need to shrink navbar on scroll

--- a/main.html
+++ b/main.html
@@ -26,15 +26,24 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/portfolio.html">Portfolio</a></li>
                 <li><a href="/about.html">About</a></li>
+                <li><a href="/portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
     </header>
 
 
     <main>
-        <div class="main-container">
+        <div class="main-container" style="letter-spacing: 0.08rem;">
+            <div class="info-text info-text-top">
+                <p style="font-size: 20px; color: white;">Enceladus was created and illustrated
+                    by <i style="font-weight: 400; color: white; letter-spacing: 0.15rem;">Laurie Hall</i>.
+                </p>
+                <p style="line-height: 1rem;">Inspired by the work from Octavia Butler's <i>Parable of the Sower</i>,
+                    the comic explores a distant, hostile world and the traits necessary for any being to survive within
+                    it.
+                </p>
+            </div>
             <div class="info-text">
                 <h1>Chapter 0:</h1>
                 <h2>The Post-Human</h2>
