--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,15 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="/main.html">Read Enceladus</a></li>
-                <li><a href="/portfolio.html">Portfolio</a></li>
                 <li><a href="/about.html">About</a></li>
+                <li><a href="/portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container">
         <h1>Sorry, there isn't anything here right now. Check in again soon!</h1>
-        <h2>Once she posts some art, that is...</h2>
+        <h2>Once we post some art, that is...</h2>
     </main>
 
 </body>
