--- a/about.html
+++ b/about.html
@@ -24,18 +24,23 @@
                 </div>
             </a>
         </div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="/main.html">Read Enceladus</a></li>
-                <li><a href="/portfolio.html">Portfolio</a></li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
-        </nav>
+        <div class="nav-links-container">
+            <!-- <button type="button" class="" style="visibility: hidden;">
+                <i class="fa-solid fa-bars"></i>
+            </button> -->
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="/main.html">Read Enceladus</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main class="container">
-        <h1>About the author</h1>
-        <h2>Tell me a bit</h2>
+        <h1>About Enceladus</h1>
+        <h3>Enceladus was written and created by <i>Laurie Hall</i>.</h3>
         <p>Once i said tahdijfapoiwej f;aosdij fo;aiwj f;asdf;oiajweo;fjas;dlkf ;ozsidj</p>
     </main>
 
