--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
                 <p style="font-size: 20px; color: white;">Enceladus was created and illustrated
                     by <i style="font-weight: 400; color: white; letter-spacing: 0.15rem;">Laurie Hall</i>.
                 </p>
-                <p style="line-height: 1rem;">Inspired by the work from Octavia Butler's <i>Parable of the Sower</i>,
+                <p>Inspired by the work from Octavia Butler's <i>Parable of the Sower</i>,
                     the comic explores a distant, hostile world and the traits necessary for any being to survive within
                     it.
                 </p>
@@ -70,6 +70,7 @@
             Attribution-NonCommercial-ShareAlike 4.0 International License</u></a>
 </footer>
 
+<script src="./index.js"></script>
 <script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
 
 </html>
