clean up & mobile stuff

--- a/main.html
+++ b/main.html
@@ -35,20 +35,31 @@
 
     <main>
         <div class="main-container" style="letter-spacing: 0.08rem;">
-            <div class="info-text info-text-top">
-                <p style="font-size: 20px; color: white;">Enceladus was created and illustrated
-                    by <i style="font-weight: 400; color: white; letter-spacing: 0.15rem;">Laurie Hall</i>.
-                </p>
-                <p>Inspired by the work from Octavia Butler's <i>Parable of the Sower</i>,
-                    the comic explores a distant, hostile world and the traits necessary for any being to survive within
-                    it.
-                </p>
+            <div class="info-text-top-container">
+                <div class="info-text info-text-top">
+                    <p style="font-size: 20px; color: white;">Enceladus was created and illustrated
+                        by <i style="font-weight: 400; color: white; letter-spacing: 0.15rem;">Laurie Hall</i>.
+                    </p>
+                    <p>Inspired by the work from Octavia Butler's <i>Parable of the Sower</i>,
+                        the comic explores a distant, hostile world and the traits necessary for any being to survive
+                        within
+                        it.
+                    </p>
+                </div>
+
+                <!-- <div class="next-arrow-container">
+                    <button class="next-arrow" onclick="scrollArrowFunction(document.getElementById('display-comic'))">
+                        <i class="fa-solid fa-angle-down"></i>
+                    </button>
+                </div> -->
+
             </div>
-            <div class="info-text">
-                <h1>Chapter 0:</h1>
-                <h2>The Post-Human</h2>
-            </div>
-            <div class="display-comic">
+
+            <div id="display-comic">
+                <div class="info-text">
+                    <h1>Chapter 0:</h1>
+                    <h2>The Post-Human</h2>
+                </div>
                 <img src="/assets/Enceladus/1.png" alt="" />
                 <img src="/assets/Enceladus/2.png" alt="" />
                 <img src="/assets/Enceladus/3.png" alt="" />
