--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="style.css">
-    <title>Enceladus Comic</title>
-</head>
-
-<body>
-    <div class="landing">
-        <span class="landing-text spotlight-container spotlight" onclick="ani()">ENCELADUS</span>
-        <div class="eye-wrap">
-            <div class="eyelid">
-                <span id="eyelid-span"></span>
-            </div>
-            <div class="eye">
-                <div class="eye-ball">
-                    <div class="iris"></div>
-                    <div class="iris2"></div>
-                    <div class="iris3"></div>
-                    <div class="iris4"></div>
-                    <div class="pupil"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-
-<script src="./index.js"></script>
-<script src="https://kit.fontawesome.com/11ac109a34.js" crossorigin="anonymous"></script>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/manifest.json"/><title>Enceladus Comic</title><script type="text/javascript">!function(n){if("/"===n.search[1]){var a=n.search.slice(1).split("&").map((function(n){return n.replace(/~and~/g,"&")})).join("?");window.history.replaceState(null,null,n.pathname.slice(0,-1)+a+n.hash)}}(window.location)</script><script defer="defer" src="/static/js/main.d32c4968.js"></script><link href="/static/css/main.8fb099f4.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
